# tggpt

./: Dockerfile  docker-compose.yml  pyproject.toml
tggpt/: __main__.py  app.py  horde.py  last_messages.py  prompt.py
